# icl_poetry_template

./: README.md  pyproject.toml
.github/workflows/: ci.yml
