[tool.poetry]
name = "MyProject"
version = "0.1.0"
description = ""
authors = ["Flavio Regis de Arruda <flavio@xboard.dev>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-mypy = "^0.10.0"
pytest-mock = "^3.11.0"
isort = "^5.12.0"
pre-commit = "^3.3.0"
black = "^23.7.0"
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"

[tool.mypy]
disallow_any_explicit = true
disallow_any_generics = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = [".venv/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-v --mypy -p no:warnings --cov=myproject --cov-report=html --doctest-modules --ignore=myproject/__main__.py"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
